# sensor-log-generator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  .yamllint.yml  BUILD_STRATEGY.md  CHANGES_SUMMARY.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMMANDS.md  CROSS_PLATFORM_STRATEGY.md  DATABASE_OPTIMIZATION.md  DOCKER_WAL_MODE.md  Dockerfile  FINAL_CHANGES.md  Makefile  QUICK_REFERENCE.md  README.md  README_DATABASE.md  TESTING_CONTAINERS.md  TESTING_DATABASE.md  TESTING_PHILOSOPHY.md  WAL_MODE_SUMMARY.md  build.py  check_db.sh  collector.py  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.macos.yml  docker-compose.test-wal.yml  docker-compose.yml  justfile  main.py  monitor_db.sh  mypy.ini  pyproject.toml  read_safe.py  read_sensor_data.py  reader_example.py  stress_test.py  (+9 more)
.cspell/: custom-dictionary.txt
.github/workflows/: ci.yml  release.yml
config/: config.yaml  node-identity.json
scripts/: check.py  clean_data.py  fix-all.py  setup-pre-commit.sh  setup.py  setup.sh  test-fast.py
scripts/monitoring/: README.md  check_db.sh  monitor_db.sh  query_all_log_files.sh
scripts/readers/: README.md  read_safe.py
scripts/testing/: README.md  fix_tests.py  run_stress_test.sh  run_tests_serial.py  stress_test_production.sh  test_concurrent_readers.sh  test_container.sh  test_production_load.py  test_readers.py  test_readers_containerized.py
src/: __init__.py  anomaly.py  config.py  database.py  error_utils.py  llm_docs.py  location.py  monitor.py  safe_logger.py  simulator.py
tests/: test_anomaly.py  test_checkpoint.py  test_config.py  test_config_validation.py  test_database.py  test_database_corruption.py  test_database_read_operations.py  test_enums.py  test_integration.py  test_location.py  test_monitor.py  test_simulator.py
